- Java8 environment type added - Setting up host user account in guest moved to the   IEnvironment.buildImage() method to make the account available   during environment startup   - UserName option added to the "generic" environment type

--- a/README
+++ b/README
@@ -7,6 +7,8 @@ Set of tools to make Docker administration easier
 Important remark - all paths according to CentOs 7
 
 * Make sure docker is already installed
+* Copy environment types Dockerfiles to /var/lib/docker/images:
+  cp -pR images /var/lib/docker
 * Set up system permissions:
   ./permissions
 * Set up required sudo rules:
